--- a/index.html
+++ b/index.html
@@ -36,19 +36,19 @@
   <meta property="og:locale" content="en_US" />
   <meta property="og:type" content="website" />
   <meta property="og:title" content="Mas Jaya Sutarno | Support Engineer" />
-  <meta property="og:description" content="Software Developer" />
+  <meta property="og:description" content="Support Engineer" />
   <meta property="og:url" content="https://masjaya19.github.io/" />
   <meta property="og:site_name" content="Mas Jaya Sutarno | Support Engineer" />
   <meta property="article:publisher" content="https://masjaya19.github.io/" />
   <meta property="og:image" content="https://masjaya19.github.io/examples/preview.JPG" />
   <!-- Twitter -->
   <meta name="twitter:card" content="summary" />
-  <meta name="twitter:site" content="@masjaya19" />
+  <meta name="twitter:site" content="@masjay19" />
   <meta name="twitter:title" content="Coder | Technofreak | Explorer | Minimalist | Humane" />
-  <meta name="twitter:description" content="Software Developer" />
-  <meta name="twitter:url" content="https://twitter.com/varad_bhogayata" />
+  <meta name="twitter:description" content="Support Engineer" />
+  <meta name="twitter:url" content="https://twitter.com/masjay19" />
   <meta name="author" content="Mas Jaya Sutarno" />
-  <meta name="description" content="Software Developer with a passion for backend development and artificial intelligence." />
+  <meta name="description" content="Support Engineer with a passion for Fullstack development and artificial intelligence." />
   <link rel="apple-touch-icon" sizes="57x57" href="/assets/img/favicon/apple-icon-57x57.png" />
   <link rel="apple-touch-icon" sizes="60x60" href="/assets/img/favicon/apple-icon-60x60.png" />
   <link rel="apple-touch-icon" sizes="72x72" href="/assets/img/favicon/apple-icon-72x72.png" />
@@ -147,7 +147,7 @@
         <!-- <a aria-label="Open Varad's resume in a new tab" href="#resume" target="_blank"
           onclick="window.open('https://drive.google.com/file/d/1vYi-bMyIsZPve0x_clxY8xsDtiHiOMd3/view?usp=sharing')"
           class="waves-effect waves-dark teal-text"><i class="mdi-file-folder-open small"></i><span>Resume</span></a> -->
-        <a aria-label="Open Varad's resume in a new tab" href="https://varadbhogayata.github.io/assets/resume/Varad_Bhogayata_Resume.pdf" target="_blank"
+        <a aria-label="Open Mas Jaya's resume in a new tab" href="https://masjaya19.github.io/assets/resume/masjayasutarno_resume.pdf" target="_blank"
         class="waves-effect waves-dark teal-text"><i class="mdi-file-folder-open small"></i><span>Resume</span></a>  
       </li>
     </ul>
@@ -158,8 +158,7 @@
     <a aria-label="Toggle visibility of the mobile navbar" href="#" data-activates="slide-out"
       class="button-collapse"><i class="mdi-navigation-menu"></i></a>
     <div class="name-title">
-      <a id="name" aria-label="Navigate to the beginning of the page" href="#" class="teal-text">Varad
-        Bhogayata</a><span class="black-text">Software Developer</span>
+      <a id="name" aria-label="Navigate to the beginning of the page" href="#" class="teal-text">Mas Jaya Sutarno</a><span class="black-text">Support Engineer</span>
     </div>
   </nav>
 
@@ -193,7 +192,7 @@
             class="mdi-content-mail small"></i><span>Contact</span></a>
       </li>
       <li class="bold">
-        <a aria-label="Open Varad's Resume in a new tab"
+        <a aria-label="Open Mas Jaya's Resume in a new tab"
           href="https://drive.google.com/file/d/1B6MZ1z0-7NsefC3Lm_q-uhib28MTqpE9/view?usp=sharing" target="_blank"
           class="waves-effect waves-dark teal-text"><i class="mdi-file-folder-open small"></i><span>Resume</span></a>
       </li>
@@ -685,7 +684,7 @@ of each drug container to estimate the degradation of the drug.
                 </ul>
                 <!-- TODO: UPLOAD THIS PROJECT ON GITHUB -->
                 <div class="card-action">
-                  <a aria-label="Visit the GitHub repo for  project" href="https://github.com/varadbhogayata/"
+                  <a aria-label="Visit the GitHub repo for  project" href="https://github.com/masjaya19/"
                     target="_blank" data-position="top" data-tooltip="View Source"
                     class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i
                       class="fa fa-github"></i></a>
@@ -720,7 +719,7 @@ of each drug container to estimate the degradation of the drug.
 
                 </ul>
                 <div class="card-action">
-                  <a aria-label="Visit the GitHub repo for  project" href="https://github.com/varadbhogayata/"
+                  <a aria-label="Visit the GitHub repo for  project" href="https://github.com/masjaya19/"
                     target="_blank" data-position="top" data-tooltip="View Source"
                     class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i
                       class="fa fa-github"></i></a>
@@ -981,28 +980,28 @@ of each drug container to estimate the degradation of the drug.
       <h3 class="page-title white-text teal">Contact</h3>
       <div class="container">
         <p>
-          <a aria-label="Call Varad" data-position="top" data-tooltip="Call Varad"
+          <a aria-label="Call MasJaya" data-position="top" data-tooltip="Call Mas Jaya"
             class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i class="fa fa-phone"></i><a
               aria-label="Call Mas Jaya">+6287880777520</a></a>
         </p>
         <p>
-          <a aria-label="Email Varad" href="mailto:vbhogayata@gmail.com" target="_blank" data-position="top"
-            data-tooltip="Email Varad" class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i
-              class="fa fa-envelope"></i><a aria-label="Email Varad" href="mailto:masjaya.sutarno@gmail.com"
+          <a aria-label="Email Mas Jaya" href="mailto:masjaya.sutarno@gmail.com" target="_blank" data-position="top"
+            data-tooltip="Email Mas Jaya" class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i
+              class="fa fa-envelope"></i><a aria-label="Email Mas Jaya" href="mailto:masjaya.sutarno@gmail.com"
               class="hoverline">masjaya.sutarno@gmail.com</a></a>
         </p>
         <p>
-          <a aria-label="View Varad on GitHub" href="http://github.com/varadbhogayata" target="_blank"
-            data-position="top" data-tooltip="View Varad on GitHub"
+          <a aria-label="View Mas Jaya on GitHub" href="http://github.com/masjaya19" target="_blank"
+            data-position="top" data-tooltip="View Mas Jaya on GitHub"
             class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i class="fa fa-github"></i><a
-              aria-label="Varad on Github" href="http://github.com/masjaya19" class="hoverline"
+              aria-label="Mas Jaya on Github" href="http://github.com/masjaya19" class="hoverline"
               target="_blank">github.com/masjaya19</a></a>
         </p>
         <p>
-          <a aria-label="View Varad on LinkedIn" href="http://linkedin.com/in/varadbhogayata" target="_blank"
-            data-position="top" data-tooltip="View Varad on LinkedIn"
+          <a aria-label="View Mas Jaya on LinkedIn" href="http://linkedin.com/in/masjaya" target="_blank"
+            data-position="top" data-tooltip="View Mas Jaya on LinkedIn"
             class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i
-              class="fa fa-linkedin"></i><a aria-label="Varad on LinkedIn" href="https://www.linkedin.com/in/masjaya/"
+              class="fa fa-linkedin"></i><a aria-label="Mas Jaya on LinkedIn" href="https://www.linkedin.com/in/masjaya/"
               class="hoverline" target="_blank">https://www.linkedin.com/in/masjaya/</a></a>
         </p>
       </div>
