--- a/index.html
+++ b/index.html
@@ -980,6 +980,11 @@ of each drug container to estimate the degradation of the drug.
       <h3 class="page-title white-text teal">Contact</h3>
       <div class="container">
         <p>
+          <a aria-label="location MasJaya" data-position="top" data-tooltip="location Mas Jaya"
+            class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i class="fa fa-map-marker"></i><a
+              aria-label="Location Mas Jaya">Jakarta, Indonesia</a></a>
+        </p>
+        <p>
           <a aria-label="Call MasJaya" data-position="top" data-tooltip="Call Mas Jaya"
             class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i class="fa fa-phone"></i><a
               aria-label="Call Mas Jaya">+6287880777520</a></a>
