--- a/index.html
+++ b/index.html
@@ -916,32 +916,31 @@ of each drug container to estimate the degradation of the drug.
             <div class="card">
               <div class="card-content">
                 <p>
-                  <span class="card-title"><a href="https://www.asu.edu/" target="_blank" class="teal-text hoverline">Arizona State University</a></span>
+                  <span class="card-title"><a href="https://mercusuar.ac.id/" target="_blank" class="teal-text hoverline">STMIK Mercusuar</a></span>
                 </p>
-                <p class="brown-text">Tempe, USA</p>
+                <p class="brown-text">Bekasi, Indonesia</p>
                 <p>
-                  <b>Degree: </b>Master of Science in Computer Science      
+                  <b>Degree: </b>Bachelor of Technology in System Information
                   <br>
-                  <b>CGPA: </b>4.0/4.0
+                  <b>CGPA: </b>2.82/4.0
                 </p>
-
+          
                 <ul>
                   <p>
                     <b>Relevant Courseworks:</b>
                   <ul>
-                    <li>Distributed Database Systems</li>
-                    <li>Cloud Computing</li>
-                    <li>Foundations of Algorithms</li>                    
+                    <li>Data Structures and Algorithms</li>
+                    <li>Database Management Systems</li>
+                    <li>Operating Systems</li>
+                    <li>Machine Learning</li>
+                    <li>Computer Vision</li>
                   </ul>
                   </p>
-
                 </ul>
               </div>
             </div>
-
-            
           </div>
-          <div class="col s12 m6 l6">
+          <!-- <div class="col s12 m6 l6">
             <div class="card">
               <div class="card-content">
                 <p>
@@ -970,7 +969,7 @@ of each drug container to estimate the degradation of the drug.
                 </ul>
               </div>
             </div>
-          </div>
+          </div> -->
         </div>
       </div>
     </section>
@@ -982,7 +981,7 @@ of each drug container to estimate the degradation of the drug.
         <p>
           <a aria-label="location MasJaya" data-position="top" data-tooltip="location Mas Jaya"
             class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i class="fa fa-map-marker"></i><a
-              aria-label="Location Mas Jaya">Jakarta, Indonesia</a></a>
+              aria-label="Location Mas Jaya">Jakarta, Indonesia (UTC+7)</a></a>
         </p>
         <p>
           <a aria-label="Call MasJaya" data-position="top" data-tooltip="Call Mas Jaya"
