--- a/index.html
+++ b/index.html
@@ -259,11 +259,11 @@
           </h2>
         </blockquote> -->        
         <p>
-          I am a Computer Science Grad Student at Arizona State University. I enjoy problem-solving and coding. Always strive to bring 100% to the work I do.
+          I am working in IT for 10+ Years in various roles and jobs. I enjoy problem-solving and coding. Always strive to bring 100% to the work I do.
 
-          I have worked on technologies like Python, Django, Flask, MySQL, PostgreSQL, MongoDB, HTML5, CSS, Java, C++ during my bachelor's. I have 19 months of professional work experience which helped me strengthen my experience in Python, Flask, and Django.
+          I have worked on technologies like C#, Ruby on Rails, Python, .Net Core, Django, FastAPI, SQL Server, MySQL, PostgreSQL, Javascript, HTML5, CSS, Linux/Unix Command, Shell Script during professional work experience.
 
-          I am passionate about developing complex applications that solve real-world problems impacting millions of users.
+          I am passionate about IT Services Management, Helping users solve the problem, developing complex applications that solve real-world problems impacting millions of users.
         </p>
         <p>
           <ul>
@@ -979,7 +979,7 @@ of each drug container to estimate the degradation of the drug.
       <h3 class="page-title white-text teal">Contact</h3>
       <div class="container">
         <p>
-          <a aria-label="location MasJaya" data-position="top" data-tooltip="location Mas Jaya"
+          <a aria-label="location MasJaya" data-position="top" data-tooltip="Location Mas Jaya"
             class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i class="fa fa-map-marker"></i><a
               aria-label="Location Mas Jaya">Jakarta, Indonesia (UTC+7)</a></a>
         </p>
