--- a/index.html
+++ b/index.html
@@ -107,6 +107,20 @@
       </li>
 
       <li class="bold">
+        <!-- mdi-av-web small
+             mdi-av-my-library-books small-->
+        <a aria-label="Navigate to the Achievements section" href="#achievements" class="waves-effect waves-dark teal-text"><i
+            class="mdi-action-assignment-turned-in small"></i><span>Achievements</span></a>
+      </li>
+
+      <li class="bold">
+        <!-- mdi-av-web small
+             mdi-av-my-library-books small-->
+        <a aria-label="Navigate to the Certificates section" href="#certificates" class="waves-effect waves-dark teal-text"><i
+            class="mdi-action-description small"></i><span>Certificates</span></a>
+      </li>
+
+      <li class="bold">
         <!--
         ICONS:
         mdi-action-assessment
