--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
         <!-- mdi-av-web small
              mdi-av-my-library-books small-->
         <a aria-label="Navigate to the Projects section" href="#projects" class="waves-effect waves-dark teal-text"><i
-            class="mdi-av-my-library-books small"></i><span>Projects</span></a>
+            class="mdi-action-assignment small"></i><span>Projects</span></a>
       </li>
 
       <li class="bold">
